--- a/JavaScriptCode/Pinella/Users.html
+++ b/JavaScriptCode/Pinella/Users.html
@@ -33,6 +33,9 @@
                     <button class = "copy" onclick="copia()" ></button>
                     <input class="idOutput" type="text" id="idStanza" readonly/>
                 </div>
+                <div class="btnInvia1">
+                    <button><a href="Home.html">Inizia</a></button>
+                </div>
             </div>
             <div class="connection box">
                 <label class="label-connect">Inserisci il nome :</label>
@@ -40,10 +43,11 @@
                 <label class="label-connect1">Inserisci il codice della stanza:</label>
                 <input type="text"class="campi" placeholder="Inserisci il codice della stanza" id="gameId"/>
                 <button onclick="joinGame()">Collegati a una stanza</button>
+                <div class="btnInvia2">
+                    <button><a href="Home.html">Inizia</a></button>
+                </div>
             </div>
-            <div class="btnInvia">
-                <button><a href="Home.html">Inizia</a></button>
-            </div>
+            
         </div>    
     </div>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
