--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -14,7 +14,7 @@
                 <div class="mazzo">
                     <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pescaMazzo()" alt="Mazzo delle carte"/>
                 </div>
-                <div class="scarto"></div>
+                <div class="scarto" onclick="pescaScarto()"></div>
             </div>
             
             <div class="giocatore"></div>
