--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -15,7 +15,7 @@
                 <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pescaMazzo()"
                      alt="Mazzo delle carte"/>
             </div>
-            <div class="scarto" onclick="pescaScarto()"></div>
+            <div class="scarto"></div>
         </div>
 
         <div class="giocatore"></div>
