--- a/JavaScriptCode/Pinella/Users.html
+++ b/JavaScriptCode/Pinella/Users.html
@@ -56,6 +56,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="js/connessione.js"></script>
+<script src="js/giocatore.js"></script>
 <script type="module">
     $(document).ready(function () {
         $('input[type="radio"]').click(function () {
