--- a/Pinella/Home.html
+++ b/Pinella/Home.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="../immagini/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body onload="allowDisconnection()">
+<body onload="allowDisconnection() , setup()">
 <div class="container">
     <div>
         <button class="fineTurno" onclick="fineTurno()">Finisci il turno</button>
@@ -34,6 +34,7 @@
 <script src="js/carte.js"></script>
 <script src="js/deck.js"></script>
 <script src="js/giocatore.js"></script>
+<script src="js/regole.js"></script>
 <script src="js/dbInteraction.js"></script>
 <script src="js/pinella.js"></script>
 </body>
